welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:19: error: ';' expected but 'if' found.
    }if (n>0)
     ^arrayFront9:21: error: ';' expected but 'else' found.
    else
    ^